<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="#ff336E7B"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/param_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/setupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/setuptitletext"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp" >

            <TableRow>

                <Button
                    android:id="@+id/Button01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickOK"
                    android:text="@string/button01text"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </Button>

                <Button
                    android:id="@+id/Button02"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickSave"
                    android:text="@string/button02text"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </Button>

                <Button
                    android:id="@+id/Button03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:onClick="clickExit"
                    android:text="@string/button03text"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </Button>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelPart"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelparttext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramPart"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:singleLine="true" />
            </TableRow>
            
            <TableRow>

                <TextView
                    android:id="@+id/paramLabelNav"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelnavtext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramNav"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>
            
            <TableRow>

                <TextView
                    android:id="@+id/paramLabelSelect"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelselecttext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramSelect"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>
            

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelSess"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelsesstext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramSess"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelBlock"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelblocktext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramBlock"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelGroup"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelgrouptext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramGroup"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelCondition"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelconditiontext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramCondition"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelMode"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelmodetext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramMode"
                    android:layout_weight="1"
                    android:gravity="left" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelTrials"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabeltrialstext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramTrials"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelTargets"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabeltargetstext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramTargets"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelAmplitude"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelamplitudetext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramAmplitude"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelWidth"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:text="@string/paramlabelwidthtext"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/paramWidth"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <CheckBox
                android:id="@+id/paramVibrotactileFeedback"
                android:text="@string/paramvibrotactilefeedbacktext"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/paramAuditoryFeedback"
                android:text="@string/paramauditoryfeedbacktext"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <CheckBox
                android:id="@+id/paramDebug"
                android:text="@string/paramdebugtext"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableLayout>
    </LinearLayout>

</ScrollView>